# qmdblack

./: .gitignore  README.md  ci.sh  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
src/qmdblack/: __init__.py  cli.py  core.py
tests/: test_core.py
