[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qmdblack"
version = "0.2.0"
description = "Format Python code blocks in Quarto Markdown (.qmd) files using Black"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["quarto", "black", "formatter", "qmd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "black>=22.1",
    "click>=8.0",
]

[project.scripts]
qmdblack = "qmdblack.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qmdblack"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "black>=24.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
